--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <!-- top pagina -->
     <div class="logo">
-       
+       <img src="img/logo.svg" alt="logo">
     </div>
 
     <header>
@@ -18,8 +18,8 @@
         <h3>Scritto da <a href="https://www.google.it/">The Booleaner</a></h3>
         <div>il 10/10/2020</div>
         <section class="foto">
-            <img src="img\tim-1.jpg" alt="tim1">
-            <img src="img\tim-2.jpg" alt="tim2">
+            <img src="img/tim-1.jpg" alt="tim1">
+            <img src="img/tim-2.jpg" alt="tim2">
             <div>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</div>
             <div>2nd Photo: Wikimedia, by Paul ClarkeS</div>
         </section>
