--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <header>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-        <h3>Scritto da <a href="https://www.google.it/">The Booleaner</a></h3>
-        <div>il 10/10/2020</div>
+        <h3 class="info">Scritto da <a href="https://www.google.it/">The Booleaner</a></h3>
+        <div class="info">il 10/10/2020</div>
         <section class="foto">
             <img src="img/tim-1.jpg" alt="tim1">
             <img src="img/tim-2.jpg" alt="tim2">
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie cosequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud <span>exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span> Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie cosequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
         <ul>
             <li>Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</li>
             <li>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</li>
@@ -43,7 +43,7 @@
             </thead>
             
             <tbody>
-                <tr>
+                <tr class="colorata">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
@@ -53,7 +53,7 @@
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
                 </tr>
-                <tr>
+                <tr class="colorata">
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor</td>
                     <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eos quo, placeat consectetur ullam fugiat similique perferendis repellendus illo mollitia eveniet expedita a quia modi. Totam saepe quibusdam natus harum.</td>
@@ -61,15 +61,15 @@
             </tbody>
         </table>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie cosequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie cosequat, <span>vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto</span> odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
     </main>
 
     <footer>
         <h3>Potrebbero interessarti</h3>
-        <h3>Lorem ipsum dolor</h3>
-        <img src="img\monitor.jpg" alt="monitor">
-        <h3>Lorem ipsum dolor</h3>
-        <img src="img\graph.jpg" alt="graph">
+        <div>
+            <h3 class="monitor">Lorem ipsum dolor</h3>
+            <h3 class="graph">Lorem ipsum dolor</h3>
+        </div>
     </footer>
 </body>
 </html>
