--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style-bonus.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     <div class="logo">
        <img src="img/logo.svg" alt="logo">
     </div>
-
+    <section class="tutto">
     <header>
         <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
         <h3 class="info">Scritto da <a href="https://www.google.it/">The Booleaner</a></h3>
@@ -71,5 +72,6 @@
             <h3 class="graph">Lorem ipsum dolor</h3>
         </div>
     </footer>
+    </section>
 </body>
 </html>
